Agregado de txt y modificacion de index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
 
       <div class="encabezado">
-        <h2>Videojuegos que mas me han impactado</h2>
+        <h2>Videojuegos que mas me han gustado</h2>
     </div>
 
     <div class="parrafo">
